--- a/03_pytorch_classification.ipynb
+++ b/03_pytorch_classification.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "9d7a353e",
    "metadata": {},
    "outputs": [
@@ -315,10 +315,10 @@
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,\n",
     "                                                    y,\n",
     "                                                    test_size=0.2, # 0.2 = 20% of data will be test & 80% will be train\n",
-    "                                                    random_state=42) \n",
+    "                                                    random_state=42)\n",
     "len(X_train), len(y_train), \".....\", len(X_test), len(y_test)"
    ]
   },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "bc5f10ba",
    "metadata": {},
    "outputs": [],
@@ -376,16 +376,16 @@
     "class CircleModelV0(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        \n",
+    "\n",
     "        self.layer_1 = nn.Linear(in_features=2, out_features=5)\n",
     "        self.layer_2 = nn.Linear(in_features=5, out_features=1)\n",
-    "        \n",
+    "\n",
     "        self.two_linear_layers = nn.Sequential(\n",
     "            nn.Linear(in_features=2, out_features=5),\n",
     "            nn.Linear(in_features=5, out_features=1)\n",
     "        )\n",
-    "        \n",
-    "        \n",
+    "\n",
+    "\n",
     "    def forward(self, x):\n",
     "        l1_out = self.layer_1(x)\n",
     "        return self.layer_2(l1_out)\n",
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "9d627ed7",
    "metadata": {
     "scrolled": true
@@ -532,8 +532,8 @@
     "# Make predictions\n",
     "with torch.inference_mode():\n",
     "  untrained_preds = model_0(X_test.to(device))\n",
-    "                                      \n",
-    "                                      \n",
+    "\n",
+    "\n",
     "print(f\"Length of predictions: {len(untrained_preds)}, Shape: {untrained_preds.shape}\")\n",
     "print(f\"Length of test samples: {len(X_test)}, Shape: {X_test.shape}\")\n",
     "print(f\"\\nFirst 10 predictions:\\n{torch.round(untrained_preds[:10])}\")\n",
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "ee56a609",
    "metadata": {},
    "outputs": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "0250927d",
    "metadata": {},
    "outputs": [
@@ -625,7 +625,7 @@
    ],
    "source": [
     "# View the first 5 outputs of the forward pass on the test data\n",
-    "model_0.eval() \n",
+    "model_0.eval()\n",
     "with torch.inference_mode():\n",
     "  y_logits = model_0(X_test.to(device))[:5]\n",
     "y_logits"
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "f43a03fb",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
     }
    ],
    "source": [
-    "# Find the predicted labels \n",
+    "# Find the predicted labels\n",
     "y_preds = torch.round(y_pred_probs)\n",
     "y_preds"
    ]
@@ -714,16 +714,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "703ad07f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setup the loss function\n",
     "\n",
-    "# BCELoss = requires inputs to have gone through the sigmoid activation \n",
+    "# BCELoss = requires inputs to have gone through the sigmoid activation\n",
     "#           function prior to input to BCELoss\n",
-    "# loss_fn = nn.BCELoss() \n",
+    "# loss_fn = nn.BCELoss()\n",
     "\n",
     "loss_fn = nn.BCEWithLogitsLoss() # BCEWithLogitsLoss = sigmoid activation function built-in\n",
     "\n",
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "222178fe",
    "metadata": {},
    "outputs": [
@@ -763,12 +763,12 @@
    ],
    "source": [
     "torch.manual_seed(42)\n",
-    "torch.cuda.manual_seed(42) \n",
+    "torch.cuda.manual_seed(42)\n",
     "\n",
     "# Set the number of epochs\n",
     "epochs = 100\n",
     "\n",
-    "# Put data to target device \n",
+    "# Put data to target device\n",
     "X_train, y_train = X_train.to(device), y_train.to(device)\n",
     "X_test, y_test = X_test.to(device), y_test.to(device)\n",
     "\n",
@@ -787,7 +787,7 @@
     "  # Calculate accuracy\n",
     "  y_pred = torch.round(torch.sigmoid(y_logits)) # turn logits -> pred probs -> pred labels\n",
     "  acc = accuracy_fn(y_true=y_train,  y_pred=y_pred)\n",
-    "  \n",
+    "\n",
     "  # 3. Optimizer zero grad\n",
     "  optimizer.zero_grad()\n",
     "\n",
@@ -795,23 +795,22 @@
     "  loss.backward()\n",
     "\n",
     "  # 5. Optimizer step (gradient descent)\n",
-    "  optimizer.step() \n",
+    "  optimizer.step()\n",
     "\n",
     "  ### Testing\n",
     "  model_0.eval()\n",
     "  with torch.inference_mode():\n",
-    "    # 1. Forward pass \n",
+    "    # 1. Forward pass\n",
     "    test_logits = model_0(X_test).squeeze()\n",
     "    test_pred = torch.round(torch.sigmoid(test_logits))\n",
     "\n",
     "    # 2. Calculate test loss/acc\n",
     "    test_loss = loss_fn(test_logits, y_test)\n",
     "    test_acc = accuracy_fn(y_true=y_test, y_pred=test_pred)\n",
-    "  \n",
+    "\n",
     "  # Print out what's happenin'\n",
     "  if epoch % 10 == 0:\n",
-    "    print(f\"Epoch: {epoch} | Loss: {loss:.5f}, Acc: {acc:.2f}% | Test loss: {test_loss:.5f}, Test acc: {test_acc:.2f}%\")\n",
-    "     "
+    "    print(f\"Epoch: {epoch} | Loss: {loss:.5f}, Acc: {acc:.2f}% | Test loss: {test_loss:.5f}, Test acc: {test_acc:.2f}%\")\n"
    ]
   },
   {
@@ -824,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "27d97387",
    "metadata": {},
    "outputs": [],
@@ -832,21 +831,21 @@
     "class CircleModelV1(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        \n",
+    "\n",
     "        self.layer_1 = nn.Linear(in_features=2, out_features=10)\n",
     "        self.layer_2 = nn.Linear(in_features=10, out_features=10)\n",
     "        self.layer_3 = nn.Linear(in_features=10, out_features=1)\n",
     "        self.relu    = nn.ReLU()\n",
-    "        \n",
-    "        \n",
-    "        \n",
+    "\n",
+    "\n",
+    "\n",
     "    def forward(self, x):\n",
     "        z = self.layer_1(x)\n",
     "        a = self.relu(z)\n",
     "        z = self.layer_2(a)\n",
     "        a = self.relu(z)\n",
     "        z = self.layer_3(a)\n",
-    "        return z "
+    "        return z"
    ]
   },
   {
@@ -935,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "2568cb55",
    "metadata": {},
    "outputs": [
@@ -960,50 +959,50 @@
     "# Set the number of epochs\n",
     "epochs = 1000\n",
     "\n",
-    "# Put data to target device \n",
+    "# Put data to target device\n",
     "X_train, y_train = X_train.to(device), y_train.to(device)\n",
     "X_test, y_test = X_test.to(device), y_test.to(device)\n",
     "\n",
     "\n",
     "for epoch in range(epochs):\n",
-    "    \n",
+    "\n",
     "    # Training\n",
     "    model_1.train()\n",
-    "    \n",
+    "\n",
     "    # Forward Pass\n",
     "    y_logits = model_1.forward(X_train).squeeze()\n",
-    "    \n",
+    "\n",
     "    # Loss\n",
     "    loss = loss_fn(y_logits, y_train)\n",
-    "    \n",
+    "\n",
     "    y_pred = torch.round(torch.sigmoid(y_logits))\n",
-    "    \n",
+    "\n",
     "     # Accuracy\n",
     "    acc = accuracy_fn(y_true=y_train, y_pred=y_pred)\n",
-    "    \n",
+    "\n",
     "    # Reset gradients\n",
     "    optimizer.zero_grad()\n",
-    "    \n",
+    "\n",
     "    # Backpropagation\n",
     "    loss.backward()\n",
-    "    \n",
+    "\n",
     "    # Gradient Descent\n",
     "    optimizer.step()\n",
-    "    \n",
+    "\n",
     "    # Testing\n",
     "    model_1.eval()\n",
-    "    \n",
+    "\n",
     "    with torch.inference_mode():\n",
     "        test_logits = model_1.forward(X_test).squeeze()\n",
-    "        \n",
+    "\n",
     "        # Test loss\n",
     "        test_loss = loss_fn(test_logits, y_test)\n",
-    "        \n",
+    "\n",
     "        test_preds = torch.round(torch.sigmoid(test_logits))\n",
-    "        \n",
-    "        # Accuracy \n",
+    "\n",
+    "        # Accuracy\n",
     "        test_acc = accuracy_fn(y_true=y_test, y_pred=test_preds)\n",
-    "        \n",
+    "\n",
     "        # Print out what's happenin'\n",
     "        if epoch % 100 == 0:\n",
     "            print(f\"Epoch: {epoch} | Loss: {loss:.5f}, Acc: {acc:.2f}% | Test loss: {test_loss:.5f}, Test acc: {test_acc:.2f}%\")\n"
@@ -1314,15 +1313,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "id": "89f11f2a",
    "metadata": {},
    "outputs": [],
    "source": [
     "class BlobModel(nn.Module):\n",
     "    def __init__(self, input_features, output_features, hidden_units=8):\n",
-    "        super().__init__()        \n",
-    "        \n",
+    "        super().__init__()\n",
+    "\n",
     "        self.linear_layer_stack = nn.Sequential(\n",
     "            nn.Linear(in_features=input_features, out_features=hidden_units),\n",
     "            nn.ReLU(),\n",
@@ -1330,23 +1329,23 @@
     "            nn.ReLU(),\n",
     "            nn.Linear(in_features=hidden_units, out_features=output_features)\n",
     "        )\n",
-    "        \n",
-    "        \n",
-    "        \n",
+    "\n",
+    "\n",
+    "\n",
     "    def forward(self, x):\n",
     "        return self.linear_layer_stack(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "id": "adbf6d50",
    "metadata": {},
    "outputs": [],
    "source": [
     "model_blob = BlobModel(\n",
-    "              input_features=3, \n",
-    "              output_features=4, \n",
+    "              input_features=3,\n",
+    "              output_features=4,\n",
     "              hidden_units=8).to(device)"
    ]
   },
@@ -1360,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "id": "808fd604",
    "metadata": {},
    "outputs": [
@@ -1405,7 +1404,7 @@
     }
    ],
    "source": [
-    "# Put data to target device \n",
+    "# Put data to target device\n",
     "X_blob_train, y_blob_train = X_blob_train.to(device), y_blob_train.to(device)\n",
     "X_blob_test, y_blob_test = X_blob_test.to(device), y_blob_test.to(device)\n",
     "\n",
@@ -1448,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "id": "48863edb",
    "metadata": {},
    "outputs": [
@@ -1477,51 +1476,50 @@
     "epochs = 1000\n",
     "\n",
     "for epoch in range(epochs):\n",
-    "    \n",
+    "\n",
     "    # Training\n",
     "    model_blob.train()\n",
-    "    \n",
+    "\n",
     "    # Forward Pass\n",
     "    y_pred_logits = model_blob(X_blob_train)\n",
-    "    \n",
+    "\n",
     "    # Loss\n",
     "    loss = loss_fn(y_pred_logits, y_blob_train)\n",
-    "    \n",
+    "\n",
     "    y_pred_probs = torch.softmax(y_pred_logits, dim=1)\n",
     "    y_pred_labels = torch.argmax(y_pred_probs, dim=1)\n",
-    "    \n",
+    "\n",
     "    # Accuracy\n",
     "    acc = accuracy_fn(y_true=y_blob_train, y_pred=y_pred_labels)\n",
-    "    \n",
+    "\n",
     "    # Zero grad\n",
     "    optimizer.zero_grad()\n",
-    "    \n",
+    "\n",
     "    # Backpropagation\n",
     "    loss.backward()\n",
-    "    \n",
+    "\n",
     "    # Gradient Descent\n",
     "    optimizer.step()\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "    # Testing\n",
     "    model_blob.eval()\n",
-    "    \n",
+    "\n",
     "    with torch.inference_mode():\n",
     "        y_test_logits = model_blob(X_blob_test)\n",
-    "        \n",
+    "\n",
     "        # Test Loss\n",
     "        test_loss = loss_fn(y_test_logits, y_blob_test)\n",
-    "        \n",
+    "\n",
     "        y_test_probs = torch.softmax(y_test_logits, dim=1)\n",
     "        y_test_labels = torch.argmax(y_test_probs, dim=1)\n",
-    "        \n",
+    "\n",
     "        # Test Accuracy\n",
     "        test_acc = accuracy_fn(y_true=y_blob_test, y_pred=y_test_labels)\n",
-    "        \n",
+    "\n",
     "        # Print out what's happenin'\n",
     "        if epoch % 100 == 0:\n",
-    "            print(f\"Epoch: {epoch} | Loss: {loss:.5f}, Acc: {acc:.2f}% | Test loss: {test_loss:.5f}, Test acc: {test_acc:.2f}%\")\n",
-    "        "
+    "            print(f\"Epoch: {epoch} | Loss: {loss:.5f}, Acc: {acc:.2f}% | Test loss: {test_loss:.5f}, Test acc: {test_acc:.2f}%\")\n"
    ]
   },
   {
