--- a/06_pytorch_transfer_learning.ipynb
+++ b/06_pytorch_transfer_learning.ipynb
@@ -124,12 +124,17 @@
     "\n",
     "And so if you want to learn the process of obtaining these values for mean and standard deviation, they are learned from the image net data set.\n",
     "\n",
-    "Thus one of the most important steps when using a Pre-trained model is that your data is formatted in a similar way to what your pre-trained model's data (data on which pretrained model was trained on)."
+    "Thus one of the most important steps when using a Pre-trained model is that your data is formatted in a similar way to what your pre-trained model's data (data on which pretrained model was trained on).\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Note: As of torchvision v0.13+, there's an update to how data transforms can be created using torchvision.models. I've called the previous method \"manual creation\" and the new method \"auto creation\". This notebook showcases both."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "207b1567",
    "metadata": {},
    "outputs": [
@@ -148,15 +153,19 @@
    ],
    "source": [
     "from torchvision import transforms\n",
-    "normalize = transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
-    "                                 std=[0.229, 0.224, 0.225])\n",
+    "normalize = transforms.Normalize(mean=[0.485, 0.456, 0.406],  # 3. A mean of [0.485, 0.456, 0.406] (across each colour channel)\n",
+    "                                 std=[0.229, 0.224, 0.225])  # 4. A standard deviation of [0.229, 0.224, 0.225] (across each colour channel),\n",
     "\n",
     "manual_transforms = transforms.Compose([\n",
     "            transforms.Resize((224, 224)), # resize image to 224, 224 (height x width)\n",
     "            transforms.ToTensor(), # get images into range [0, 1]\n",
-    "            normalize]) # make sure our images have the same distribution as images in the \n",
+    "            normalize]) # make sure our images have the same distribution as images in the\n",
     "                        # ImageNet Dataset (where our pretrained models have been trained on)\n",
-    "     \n",
+    "\n",
+    "\n",
+    "# When using a pretrained model, it's important that your custom data going into the model is prepared\n",
+    "# in the same way as the original training data that went into the model.\n",
+    "\n",
     "\n",
     "\n",
     "# Create training and testing DataLoaders as well as get a list of class names\n",
@@ -293,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "a242d4db",
    "metadata": {},
    "outputs": [
@@ -759,8 +768,7 @@
     "# New method of creating a pretrained model (torchvision v0.13+)\n",
     "weights = torchvision.models.EfficientNet_B0_Weights.DEFAULT # \".DEFAULT\" = best available weights\n",
     "model = torchvision.models.efficientnet_b0(weights=weights).to(device)\n",
-    "model \n",
-    "     "
+    "model\n"
    ]
   },
   {
@@ -775,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "413d886a",
    "metadata": {},
    "outputs": [
@@ -1227,7 +1235,7 @@
     }
    ],
    "source": [
-    "# Base Layer/Feature Layers \n",
+    "# Base Layer/Feature Layers\n",
     "# Feature Extractor, these layers extracts features from our images.\n",
     "model.features\n",
     "\n"
@@ -1235,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "e6186c06",
    "metadata": {},
    "outputs": [
@@ -1253,16 +1261,16 @@
    "source": [
     "# This turns learned features into a feature vector\n",
     "# (by taking the average)\n",
-    "# So it's going to compress everything that the features section \n",
+    "# So it's going to compress everything that the features section\n",
     "# has extracted from our image into a single vector.\n",
-    "# And that vector is going to be of size 1280 because our linear layer \n",
+    "# And that vector is going to be of size 1280 because our linear layer\n",
     "# here takes 1280 as input.\n",
     "model.avgpool"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "c415b3d3",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1292,7 @@
     "# Classifier head (Classifier layer)\n",
     "# This is the actual classifier layer that is used to make predictions.\n",
     "# This layer turns feature vector into prediction logits.\n",
-    "# This can be adjusted depending on the number of classes you have for your \n",
+    "# This can be adjusted depending on the number of classes you have for your\n",
     "# own data and needs.\n",
     "model.classifier"
    ]
@@ -1370,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "27d5ea7a",
    "metadata": {},
    "outputs": [
@@ -1386,7 +1394,7 @@
     }
    ],
    "source": [
-    "# Count the number of parameters in the model \n",
+    "# Count the number of parameters in the model\n",
     "total_params = sum(\n",
     "    param.numel() for param in model.parameters() # <- all params\n",
     "\t# param.numel() for param in model.parameters() if param.requires_grad # <- only trainable params\n",
@@ -1444,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "8d8b91ed",
    "metadata": {},
    "outputs": [
@@ -1475,12 +1483,12 @@
     "model.classifier = nn.Sequential(\n",
     "    nn.Dropout(p=0.2, inplace=True), # Dropout layer\n",
     "    nn.Linear(in_features=1280, # feature vector coming in after model.avgpool\n",
-    "              out_features=len(class_names)) # how many classes do we have? \n",
-    "    ).to(device) \n",
+    "              out_features=len(class_names)) # how many classes do we have?\n",
+    "    ).to(device)\n",
     "\n",
     "model.classifier\n",
     "\n",
-    "# Now The only trainable parameters in our whole feature extraction model \n",
+    "# Now The only trainable parameters in our whole feature extraction model\n",
     "# is the output layer.\n",
     "\n"
    ]
@@ -1570,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "62e6dafd",
    "metadata": {},
    "outputs": [],
@@ -1578,7 +1586,7 @@
     "from timeit import default_timer as timer\n",
     "\n",
     "def print_train_time(start: float,\n",
-    "                     end: float, \n",
+    "                     end: float,\n",
     "                     device: torch.device = None):\n",
     "  \"\"\"Prints difference between start and end time.\"\"\"\n",
     "  total_time = end - start\n",
@@ -1608,19 +1616,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "06237589",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a# Define loss and optimizer\n",
+    "# Define loss and optimizer\n",
     "loss_fn = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "729a13a8",
    "metadata": {},
    "outputs": [
@@ -1692,89 +1700,89 @@
     "\n",
     "for epoch in range(epochs):\n",
     "    print(f\"Epoch: {epoch}\\n------\")\n",
-    "    \n",
+    "\n",
     "    ### Training\n",
     "    train_loss = 0 # Total loss for one epoch\n",
     "    train_acc = 0  # Total acc for one epoch\n",
-    "    \n",
+    "\n",
     "    for batch, (X, y) in enumerate(train_dataloader):\n",
-    "        \n",
+    "\n",
     "        model.train()\n",
-    "        \n",
+    "\n",
     "        # Forward pass\n",
-    "        # X is a tensor of 32 images i,e \n",
+    "        # X is a tensor of 32 images i,e\n",
     "        y_pred_logits = model.forward(X) # shape = torch.Size([32, 3])\n",
-    "        \n",
+    "\n",
     "        #  Calculate loss (per batch)\n",
     "        loss = loss_fn(y_pred_logits, y) # loss per batch\n",
     "        train_loss += loss # accumulate train loss\n",
-    "        \n",
+    "\n",
     "        y_pred_probs = torch.softmax(y_pred_logits, dim=1)\n",
     "        y_pred_labels = torch.argmax(y_pred_probs, dim=1) # shape -> torch.Size([32])\n",
-    "        \n",
+    "\n",
     "        # Accuracy\n",
     "        acc = accuracy_fn(y_true=y, y_pred=y_pred_labels)\n",
     "        train_acc += acc\n",
-    "        \n",
+    "\n",
     "        # Zero grad\n",
     "        optimizer.zero_grad()\n",
-    "        \n",
+    "\n",
     "        # Backward Propagation\n",
     "        loss.backward()\n",
-    "        \n",
+    "\n",
     "        # Gradient Descent\n",
     "        optimizer.step()\n",
-    "        \n",
+    "\n",
     "        # Print out what's happening\n",
     "        if batch % 2 == 0:\n",
     "            print(f\"Looked at {batch * len(X)}/{len(train_dataloader.dataset)} samples.\")\n",
-    "       \n",
+    "\n",
     "    # Divide total train loss by length of train dataloader\n",
     "    # to calculate train loss average per batch\n",
     "    # length of train dataloader = number of batches\n",
-    "    \n",
+    "\n",
     "    train_loss = train_loss / len(train_dataloader)\n",
     "    train_acc /= len(train_dataloader)\n",
-    "    \n",
+    "\n",
     "     # Update results dictionary\n",
     "    results[\"train_loss\"].append(train_loss)\n",
     "    results[\"train_acc\"].append(train_acc)\n",
-    "    \n",
+    "\n",
     "    # Testing\n",
     "    model.eval()\n",
-    "        \n",
+    "\n",
     "    test_loss, test_acc = 0, 0\n",
-    "        \n",
+    "\n",
     "    with torch.inference_mode():\n",
-    "            \n",
+    "\n",
     "        for X_test, y_test in test_dataloader:\n",
-    "                \n",
+    "\n",
     "            # Forward pass\n",
     "            y_test_logits = model(X_test)\n",
-    "                \n",
+    "\n",
     "            # Test Loss for each batch\n",
     "            test_batch_loss = loss_fn(y_test_logits, y_test)\n",
     "            test_loss += test_batch_loss\n",
-    "                \n",
+    "\n",
     "            y_test_probs = torch.softmax(y_test_logits, dim=1)\n",
     "            y_test_labels = torch.argmax(y_test_probs, dim=1) # shape -> torch.Size([32])\n",
-    "                \n",
+    "\n",
     "            # Calculate accuracy\n",
     "            acc = accuracy_fn(y_true=y_test, y_pred=y_test_labels)\n",
     "            test_acc += acc\n",
-    "            \n",
+    "\n",
     "        test_loss = test_loss / len(test_dataloader)\n",
     "        test_acc = test_acc / len(test_dataloader)\n",
-    "        \n",
+    "\n",
     "        # Update results dictionary\n",
     "        results[\"test_loss\"].append(test_loss)\n",
     "        results[\"test_acc\"].append(test_acc)\n",
-    "        \n",
+    "\n",
     "    # Print out what's happening after end of each epoch\n",
     "    # This is the end of each epcoh of out training loop.\n",
     "    print(f\"\\nTrain loss: {train_loss:.4f} | Test loss: {test_loss:.4f}, Train acc: {train_acc:.4f}, Test acc: {test_acc:.4f}\")\n",
-    "        \n",
-    "                \n",
+    "\n",
+    "\n",
     "# Calculate training time\n",
     "train_time_end = timer()\n",
     "total_train_time_model = print_train_time(start=train_time_start,\n",
@@ -1850,7 +1858,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
+      "\r\n",
       " 40%|████████████████████████████████████████████████▊                                                                         | 2/5 [03:06<04:39, 93.27s/it]"
      ]
     },
@@ -1865,7 +1873,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
+      "\r\n",
       " 60%|█████████████████████████████████████████████████████████████████████████▏                                                | 3/5 [04:39<03:06, 93.19s/it]"
      ]
     },
@@ -1880,7 +1888,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
+      "\r\n",
       " 80%|█████████████████████████████████████████████████████████████████████████████████████████████████▌                        | 4/5 [06:13<01:33, 93.52s/it]"
      ]
     },
@@ -2046,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "0f8641b2",
    "metadata": {},
    "outputs": [],
@@ -2077,7 +2085,7 @@
     "                                          transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
     "                                                               std=[0.229, 0.224, 0.225])\n",
     "    ])\n",
-    "  \n",
+    "\n",
     "  ### Predict on image ###\n",
     "  # 4. Make sure the model is on the target device\n",
     "  model.to(device)\n",
@@ -2086,12 +2094,12 @@
     "  model.eval()\n",
     "  with torch.inference_mode():\n",
     "    # 6. Transform the image and add an extra batch dimension\n",
-    "    # Our model expects input of shape \n",
+    "    # Our model expects input of shape\n",
     "    transformed_image = image_transform(img).unsqueeze(dim=0) # [batch_size, color_channels, height, width]\n",
     "\n",
     "    # 7. Make a prediction on the transformed image by passing it to the model (also ensure it's on the target device)\n",
-    "    target_image_pred = model(transformed_image.to(device)) \n",
-    "  \n",
+    "    target_image_pred = model(transformed_image.to(device))\n",
+    "\n",
     "  # 8. Convert the model's output logits to pred probs\n",
     "  target_image_pred_probs = torch.softmax(target_image_pred, dim=1)\n",
     "  # print(target_image_pred_probs.max())\n",
@@ -2101,7 +2109,7 @@
     "\n",
     "  # 10. Plot image with predicted label and probability\n",
     "  plt.figure()\n",
-    "  plt.imshow(img) \n",
+    "  plt.imshow(img)\n",
     "  plt.title(f\"Pred: {class_names[target_image_pred_label]} | Prob: {target_image_pred_probs.max():.3f}\")\n",
     "  plt.axis(False);"
    ]
@@ -2129,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "15bae704",
    "metadata": {
     "scrolled": true
@@ -2177,7 +2185,7 @@
     "# Get a random list of image paths from test set\n",
     "import random\n",
     "num_images_to_plot = 3\n",
-    "test_image_path_list = list(Path(test_dir).glob(\"*/*.jpg\")) # get list all image paths from test data \n",
+    "test_image_path_list = list(Path(test_dir).glob(\"*/*.jpg\")) # get list all image paths from test data\n",
     "test_image_path_sample = random.sample(population=test_image_path_list, # go through all of the test image paths\n",
     "                                       k=num_images_to_plot) # randomly select 'k' image paths to pred and plot\n",
     "\n",
@@ -2185,7 +2193,7 @@
     "\n",
     "# Make predictions on and plot the images\n",
     "for image_path in test_image_path_sample:\n",
-    "    pred_and_plot_image(model=model, \n",
+    "    pred_and_plot_image(model=model,\n",
     "                        image_path=image_path,\n",
     "                        class_names=class_names,\n",
     "                        # transform=weights.transforms(), # optionally pass in a specified transform from our pretrained model weights\n",
