--- a/05_pytorch_custom_datasets.ipynb
+++ b/05_pytorch_custom_datasets.ipynb
@@ -3382,7 +3382,7 @@
     "# We can save a code cell's contents to a file using the Jupyter magic %%writefile filename -\n",
     "\n",
     "# For example:\n",
-    "%%writefile going_modular/data_setup.py"
+    "%%writefile lib/data_setup.py"
    ]
   },
   {
@@ -3395,12 +3395,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing going_modular/data_setup.py\n"
+      "Writing lib/data_setup.py\n"
      ]
     }
    ],
    "source": [
-    "%%writefile going_modular/data_setup.py\n",
+    "%%writefile lib/data_setup.py\n",
     "\"\"\"\n",
     "Contains functionality for creating PyTorch DataLoader's for\n",
     "image classification data.\n",
