--- a/06_pytorch_transfer_learning.ipynb
+++ b/06_pytorch_transfer_learning.ipynb
@@ -23,7 +23,7 @@
     "from torchvision import transforms\n",
     "from torchinfo import summary\n",
     "\n",
-    "from going_modular import data_setup, engine\n",
+    "from lib import data_setup, engine\n",
     "from utils import accuracy_fn"
    ]
   },
@@ -1924,7 +1924,7 @@
    ],
    "source": [
     "# Import train function\n",
-    "from going_modular import engine\n",
+    "from lib import engine\n",
     "\n",
     "# Set the manual seeds\n",
     "torch.manual_seed(42)\n",
