--- a/andrej/gpt2.ipynb
+++ b/andrej/gpt2.ipynb
@@ -54,11 +54,15 @@
     "        # y = attn @ v # (B, nh, T, T) @ (B, nh, T, hs) = (B, nh, T, hs)\n",
     "        # y = y.transpose(1, 2).contiguous().view(B, T, C) # re-assemble all head outputs side by side\n",
     "\n",
-    "        # kernel fusion. flash attention is a kernel fusion algorithm, but\n",
+    "        # ? kernel fusion. flash attention is a kernel fusion algorithm, but\n",
     "        # torch.compile cannot find all the optimizations required to do attention in an efficient way\n",
     "        # like flash attention by default because it requires an algorithmic rewrite of how the attention\n",
     "        # is implemented. That's why flash attention was developed to do this in a more efficient way\n",
     "        # by fusing the kernel operations together. Flash attention is just an algorithmic rewrite.\n",
+    "        # Flash attention does more number of FLOPs than the original attention, but it is more efficient\n",
+    "        # and faster(around 7.6x) because it is very mindful of the memory hierarchy and how the data is accessed\n",
+    "        # in the memory. It uses the memory more efficiently and does not require a lot of memory bandwidth\n",
+    "        # to do the attention computation.\n",
     "        y = F.scaled_dot_product_attention(q, k, v, is_causal=True) # flash attention\n",
     "        y = y.transpose(1, 2).contiguous().view(B, T, C) # re-assemble all head outputs side by side\n",
     "\n",
@@ -361,6 +365,7 @@
     "#             print(f\"loaded {len(self.tokens)} tokens\")\n",
     "\n",
     "#         # state\n",
+    "#         # process 0 starts at position 0, process 1 starts at B * T, etc.\n",
     "#         self.current_position = self.B * self.T * self.process_rank\n",
     "\n",
     "#     def next_batch(self):\n",
@@ -466,7 +471,7 @@
     "# To get the total batch size in number of individual sequences, we divide 524288 by context length T\n",
     "# If context length is 1024, then the total batch size in number of sequences is 524288 / 1024 = 512\n",
     "total_batch_size = 524288 # 2**19, ~0.5M, in number of tokens\n",
-    "B = 64 # micro batch size\n",
+    "B = 64 # micro batch size.\n",
     "T = 1024 # sequence length\n",
     "assert total_batch_size % (B * T * ddp_world_size) == 0, \"make sure total_batch_size is divisible by B * T * ddp_world_size\"\n",
     "grad_accum_steps = total_batch_size // (B * T * ddp_world_size)\n",
@@ -548,6 +553,7 @@
     "                x, y = val_loader.next_batch()\n",
     "                x, y = x.to(device), y.to(device)\n",
     "\n",
+    "                #? Quantization\n",
     "                # ? torch.autocast is used to enable mixed precision training\n",
     "                # it automatically casts the inputs to bfloat16 when the model is on a CUDA device\n",
     "                # and the matrix multiplication is done in bfloat16 inside the GPUs. This speeds up training\n",
@@ -556,13 +562,28 @@
     "                # the backward pass and optimizer step should not be in autocast.\n",
     "\n",
     "                # unlike torch.set_float32_matmul_precision('high') which sets the precision for\n",
-    "                # all matmul operations and does not affect the data type of the tensors,\n",
+    "                # all matmul operations only and does not affect the data type of the tensors outside GPU,\n",
     "                # i.e if we check the data type of the tensors, they are still float32,\n",
     "                # torch.autocast actually changes the data type of the tensors to bfloat16\n",
-    "                # and the matmul operations are done in bfloat16.\n",
-    "                # If we use float16 instead of bfloat16, we will need gradient scaling\n",
+    "                # and the matmul operations are done in bfloat16. So this change is not just local to the operation\n",
+    "                # itself. If we use float16 instead of bfloat16, we will need gradient scaling\n",
     "                # to avoid underflow and overflow issues, but bfloat16 does not need gradient scaling\n",
     "                # and is more stable for training large models.\n",
+    "\n",
+    "                # float32 -> 1 signed bit + 8 exponent bits + 23 mantissa bits (4 bytees of memory)\n",
+    "\n",
+    "                # float16 -> 1 signed bit + 5 exponent bits + 10 mantissa bits (2 bytes of memory)\n",
+    "                # float16 has lower precision than float32 as well as lower range(because of fewer exponent bits),\n",
+    "                # so it can represent smaller and larger numbers than float16.\n",
+    "\n",
+    "                # bfloat16 -> 1 signed bit + 8 exponent bits + 7 mantissa bits (2 bytes of memory)\n",
+    "                # bfloat16 is a hybrid between full precision float32 and half precision float16,\n",
+    "                # bfloat16 is a truncated version of float32, it has the same exponent bits(i.e same range)\n",
+    "                # but fewer mantissa bits, so it has lower precision than float32,\n",
+    "                # but it has the same range as float32, so it can represent very large and very small numbers.\n",
+    "\n",
+    "                # int8 -> 1 signed bit + 7 fraction bits for the value (1 byte of memory)\n",
+    "\n",
     "                with torch.autocast(device_type=device_type, dtype=torch.bfloat16):\n",
     "                    logits, loss = model(x, y)\n",
     "                    # print(logits.dtype) # torch.bfloat16 if using autocast\n",
@@ -666,6 +687,7 @@
     "        x, y = x.to(device), y.to(device)\n",
     "        # added after video, this field is also used by the forward pass.\n",
     "        if ddp:\n",
+    "            #\n",
     "            model.require_backward_grad_sync = (micro_step == grad_accum_steps - 1)\n",
     "        with torch.autocast(device_type=device_type, dtype=torch.bfloat16):\n",
     "            logits, loss = model(x, y)\n",
@@ -675,8 +697,24 @@
     "        # instead of a SUM we want MEAN. Scale the loss here so it comes out right\n",
     "        loss = loss / grad_accum_steps\n",
     "        loss_accum += loss.detach()\n",
+    "\n",
+    "        # ? Different data is processed in parallel on different GPUs, and a separate forward and backward pass\n",
+    "        # is on each GPU. When the backward is called, and if the model.require_backward_grad_sync is True,\n",
+    "        # the gradients are synchronized across all processes, i.e. all GPUs.\n",
+    "        # This means that the gradients are averaged across all processes, i.e. all GPUs and the model\n",
+    "        # is updated on each GPU which is always identical across all GPUs.\n",
+    "\n",
+    "        # There is another method called Fully Sharded Data Parallel (FSDP) which shards the model\n",
+    "        # across all GPUs and each GPU only has a part of the model, but this is not used here.\n",
+    "\n",
+    "        # Once the forward pass is done, DPP will call all_reduce an basically it does an average\n",
+    "        # of the gradients across all processes, i.e. all GPUs and it will deposit that average\n",
+    "        # into the gradients of the model parameters on each GPU.\n",
     "        loss.backward() # deposits gradients(+=), gradients will add up on the gradient tensors over the micro steps\n",
     "    if ddp:\n",
+    "        # all_reduces averages the loss_accum across all processes, i.e. all GPUs\n",
+    "        # this is necessary to ensure that the loss is the same across all processes\n",
+    "        # and that the gradients are averaged across all processes\n",
     "        dist.all_reduce(loss_accum, op=dist.ReduceOp.AVG)\n",
     "\n",
     "    #? clip the gradients to avoid exploding gradients\n",
@@ -698,7 +736,7 @@
     "        param_group['lr'] = lr\n",
     "    optimizer.step()\n",
     "    if device_type == \"cuda\":\n",
-    "        torch.cuda.synchronize() # wait for the GPU to finish work\n",
+    "        torch.cuda.synchronize() # wait for the GPU to finish work and then measure the time, kinda like await in async code\n",
     "    t1 = time.time()\n",
     "    dt = t1 - t0 # time difference in seconds\n",
     "    tokens_processed = train_loader.B * train_loader.T * grad_accum_steps * ddp_world_size\n",
