--- a/andrej/play.ipynb
+++ b/andrej/play.ipynb
@@ -782,9 +782,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "DL-FINAL-PROJECT (venv)",
    "language": "python",
-   "name": "python3"
+   "name": "dl-final-project"
   },
   "language_info": {
    "codemirror_mode": {
@@ -796,7 +796,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
